--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="home-img">
-        <img src="/image/img.png" alt="" />
+        <img src="image/img.png" alt="" />
       </div>
     </section>
 
@@ -157,13 +157,13 @@
 
         <div class="wrapper">
           <div class="testimonail-item">
-            <img src="/image/1.jpg" alt="" />
+            <img src="image/1.jpg" alt="" />
           </div>
           <div class="testimonail-item">
-            <img src="/image/2.jpg" alt="" />
+            <img src="image/2.jpg" alt="" />
           </div>
           <div class="testimonail-item">
-            <img src="/image/3.jpg" alt="" />
+            <img src="image/3.jpg" alt="" />
           </div>
         </div>
       </div>
